src/components/core/Avatar/styles.scss
//
@import 'halo';

$size-xxsmall: 24px;
$size-xsmall: 32px;
$size-small: 48px;
$size-medium: 60px;
$size-large: 80px;
$size-badge: 16px;

.component {
  @include halo-element-base; // TODO: deprecate
  position: relative;
  border: 1px solid $slate--100;
  display: flex;
  align-items: center;

  // shapes
  &.circle {
    @include border-circle;
  }

  &.square {
    @include border-rounded;
  }

  // sizes
  &.xxsmall {
    height: $size-xxsmall;
    width: $size-xxsmall;
  }

  &.xsmall {
    height: $size-xsmall;
    width: $size-xsmall;
  }

  &.small {
    height: $size-small;
    width: $size-small;
  }

  &.medium {
    height: $size-medium;
    width: $size-medium;
  }

  &.large {
    height: $size-large;
    width: $size-large;
  }
}

img.avatar {
  display: block;
  max-width: 100%;
  max-height: 100%;
}

